# Crawler_SW_Waiblingen

./: .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  DEVLOG.md  PLAN.md  README.md  agent_utils.py  clean.py  config.py  crawl.py  crawl_agent.py  enrich.py  main.py  mcp_params.py  md2pdf.py  monitor.py  pipeline.py  prompts.py  pyproject.toml  uploader.py  utils.py  webpage_structure.py
docs/: code_review.md
experiments/: CRAWL4AI_SPIKE.md  crawl4ai_strom.py  crawl_targets.yaml
faq/: db_agent.py  faq_bot.py  ingest_kg.py  ingest_sql.py  mcp_params.py  prompts.py
faq/memory/: sw_waiblingen_sql.db
memory/: sw_waiblingen_kg.db
outputs/: Privatkunden_Baeder.json  Privatkunden_Baeder.md
scripts/: expand_accordions.js
sites/: waiblingen.yaml
static/: Kundenportal.md
tests/: test_clean.py  test_config.py  test_crawl.py  test_enrich.py  test_main.py  test_monitor.py  test_pipeline.py  test_prompts.py  test_uploader.py
