[project]
name = "web-crawler"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "openai>=1.91.0",
    "openai-agents>=0.0.19",
    "pydantic>=2.11.7",
    "pypandoc>=1.15",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.34.2",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]   # let tests/ import config.py from the repo root
testpaths = ["tests"]
