[project]
name = "web-crawler"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.9.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]   # let tests/ import config.py from the repo root
testpaths = ["tests"]
